# sai-programs

./: Anchor.toml  README.md
migrations/: deploy.ts
programs/sai-citizenship/: Cargo.toml
programs/sai-citizenship/src/: lib.rs
programs/sai-community-program/: Cargo.toml
programs/sai-community-program/src/: lib.rs
programs/sai-token-swap/: Cargo.toml
programs/sai-token-swap/src/: lib.rs
programs/sai-wallet/: Cargo.toml
programs/sai-wallet/src/: lib.rs
tests/: sai-citizenship.ts  sai-token-swap.ts
tests/airdrop/: index.ts
tests/createVaultPdas/index.ts/: index.ts
tests/setupBuyerAccounts/: index.ts
