[package]
name = "sai-citizenship"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sai_citizenship"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang =  "0.25.0"
anchor-spl = "0.25.0"
num-traits = "0.2"
num-derive = "0.3"
