[package]
name = "sai-token-swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sai_token_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang =  { version = "0.25.0", features = ["init-if-needed"]}
anchor-spl = "0.25.0"
num-traits = "0.2"
num-derive = "0.3"
